fix(forms): align checkboxes and radios

--- a/src/sass/_override-custom-libs.scss
+++ b/src/sass/_override-custom-libs.scss
@@ -66,7 +66,7 @@
     &::after {
       width: 10px;
       height: 10px;
-      top: 7.5px;
+      top: 7.8px;
       left: 6px;
     }
   }
